# TeachMe

./: .gitignore  README.md
backend/: .env.example  README.md  get_da_link.py  main.py  manim_agents.py  manim_gen.py  manim_utils.py  pyproject.toml  ruff.toml  service_chat.py  service_manim.py
backend/chat_service/: README.md  test_adk_agents.py  test_chat_service.py  test_image_support.py
backend/manim/scripts/: aaanzxuahv.py  ciosthsqnv.py  clridynhkc.py  dctiytdimj.py  eoyhglqrkm.py  fcnbkgmrib.py  gxplauhqki.py  jdibecmzpo.py  jrclerfsxv.py  juyhpzjtbd.py  knhwsgorpt.py  oeusgknfbe.py  pgftqehivh.py  piqlqvrqif.py  pllqchjfhi.py  rzicrmaaqz.py  sihhluycoj.py  sobiovwapl.py  txtykhxmjt.py  wnqqnbivxe.py  wpwguovotl.py  xblvzemmgh.py  xyymoszbrc.py
backend/templates/: math.md  orchestrator.md  script.md  video.md
frontend/: README.md  manifest.json  popup.html  popup.js  styles.css  upload.html  upload.js
