[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "google-adk>=1.15.1",
    "uvicorn>=0.37.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
